// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. article list 1`] = `
<RCTScrollView>
  <View>
    <View>
      <Link
        url="https://article1.io"
      >
        <View>
          <Card
            highResSize={1440}
            imageRatio={1}
            imageUri="https://lead1.io"
            showImage={true}
          >
            <ArticleSummary
              bylineProps={null}
              datePublicationProps={
                Object {
                  "date": "2017-11-17T00:01:00.000Z",
                  "publication": "TIMES",
                }
              }
              labelProps={
                Object {
                  "color": "#636C17",
                  "isVideo": false,
                  "title": "Label 1",
                }
              }
            />
          </Card>
        </View>
      </Link>
      <View>
        <View />
      </View>
    </View>
    <View>
      <Link
        url="https://article2.io"
      >
        <View>
          <Card
            highResSize={1440}
            imageRatio={1}
            imageUri="https://lead2.io"
            showImage={true}
          >
            <ArticleSummary
              bylineProps={
                Object {
                  "ast": Array [
                    Object {
                      "attributes": Object {},
                      "children": Array [
                        Object {
                          "attributes": Object {
                            "value": "Byline 2",
                          },
                          "children": Array [],
                          "name": "text",
                        },
                      ],
                      "name": "paragraph",
                    },
                  ],
                  "color": "#333333",
                }
              }
              datePublicationProps={
                Object {
                  "date": "2017-11-17T00:01:00.000Z",
                  "publication": "SUNDAYTIMES",
                }
              }
              labelProps={
                Object {
                  "color": "#333333",
                  "isVideo": false,
                  "title": "Label 2",
                }
              }
            />
          </Card>
        </View>
      </Link>
    </View>
    <View>
      <View>
        <View />
        <ActivityIndicator
          animating={true}
          color="#DBDBDB"
          hidesWhenStopped={true}
          size="large"
        />
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`2. article list with no images 1`] = `
<RCTScrollView>
  <View>
    <View>
      <Link
        url="https://article1.io"
      >
        <View>
          <Card
            highResSize={1440}
            imageRatio={1}
            imageUri="https://lead1.io"
            showImage={false}
          >
            <ArticleSummary
              bylineProps={null}
              datePublicationProps={
                Object {
                  "date": "2017-11-17T00:01:00.000Z",
                  "publication": "TIMES",
                }
              }
              labelProps={
                Object {
                  "color": "#636C17",
                  "isVideo": false,
                  "title": "Label 1",
                }
              }
            />
          </Card>
        </View>
      </Link>
    </View>
    <View>
      <View>
        <View />
        <ActivityIndicator
          animating={true}
          color="#DBDBDB"
          hidesWhenStopped={true}
          size="large"
        />
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`3. a retry button when load more fails 1`] = `
<RCTScrollView>
  <View>
    <View>
      <Link
        url="https://article1.io"
      >
        <View>
          <Card
            highResSize={1440}
            imageRatio={1}
            imageUri="https://lead1.io"
            showImage={true}
          >
            <ArticleSummary
              bylineProps={null}
              datePublicationProps={
                Object {
                  "date": "2017-11-17T00:01:00.000Z",
                  "publication": "TIMES",
                }
              }
              labelProps={
                Object {
                  "color": "#636C17",
                  "isVideo": false,
                  "title": "Label 1",
                }
              }
            />
          </Card>
        </View>
      </Link>
    </View>
    <View>
      <View>
        <View />
        <View>
          <Button
            title="Retry"
          />
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`4. no footer with data equalling the count 1`] = `
<RCTScrollView>
  <View>
    <View>
      <Link
        url="https://article1.io"
      >
        <View>
          <Card
            highResSize={1440}
            imageRatio={1}
            imageUri="https://lead1.io"
            showImage={true}
          >
            <ArticleSummary
              bylineProps={null}
              datePublicationProps={
                Object {
                  "date": "2017-11-17T00:01:00.000Z",
                  "publication": "TIMES",
                }
              }
              labelProps={
                Object {
                  "color": "#636C17",
                  "isVideo": false,
                  "title": "Label 1",
                }
              }
            />
          </Card>
        </View>
      </Link>
    </View>
    <View />
  </View>
</RCTScrollView>
`;

exports[`5. onviewed is called with changed items 1`] = `
Array [
  Array [
    Object {
      "viewed": true,
    },
    Array [
      Object {
        "headline": "Headline 1",
        "id": "d98c257c-cb16-11e7-b529-95e3fc05f40f",
        "label": "Label 1",
        "leadAsset": Object {
          "__typename": "Image",
          "crop": Object {
            "__typename": "Crop",
            "url": "https://lead1.io",
          },
          "title": "Lead 1",
          "type": "Image",
        },
        "publicationName": "TIMES",
        "publishedTime": "2017-11-17T00:01:00.000Z",
        "section": "world",
        "shortHeadline": "ShortHeadline 1",
        "shortSummary": Array [
          Object {
            "attributes": Object {},
            "children": Array [
              Object {
                "attributes": Object {
                  "value": "Short summary 1",
                },
                "children": Array [],
                "name": "text",
              },
            ],
            "name": "paragraph",
          },
        ],
        "summary": Array [
          Object {
            "attributes": Object {},
            "children": Array [
              Object {
                "attributes": Object {
                  "value": "Summary 1",
                },
                "children": Array [],
                "name": "text",
              },
            ],
            "name": "paragraph",
          },
        ],
        "url": "https://article1.io",
      },
      Object {
        "byline": Array [
          Object {
            "attributes": Object {},
            "children": Array [
              Object {
                "attributes": Object {
                  "value": "Byline 2",
                },
                "children": Array [],
                "name": "text",
              },
            ],
            "name": "paragraph",
          },
        ],
        "headline": "Headline 2",
        "id": "4e6894ec-cb18-11e7-b529-95e3fc05f40f",
        "label": "Label 2",
        "leadAsset": Object {
          "__typename": "Image",
          "crop": Object {
            "__typename": "Crop",
            "url": "https://lead2.io",
          },
          "title": "Lead 2",
          "type": "Image",
        },
        "publicationName": "SUNDAYTIMES",
        "publishedTime": "2017-11-17T00:01:00.000Z",
        "shortHeadline": "ShortHeadline 2",
        "shortSummary": Array [
          Object {
            "attributes": Object {},
            "children": Array [
              Object {
                "attributes": Object {
                  "value": "Short summary 2",
                },
                "children": Array [],
                "name": "text",
              },
            ],
            "name": "paragraph",
          },
        ],
        "summary": Array [
          Object {
            "attributes": Object {},
            "children": Array [
              Object {
                "attributes": Object {
                  "value": "Summary 2",
                },
                "children": Array [],
                "name": "text",
              },
            ],
            "name": "paragraph",
          },
        ],
        "url": "https://article2.io",
      },
    ],
  ],
]
`;

exports[`6. removes the retry button when successfully pressed 1`] = `
<RCTScrollView>
  <View>
    <View>
      <Link
        url="https://article1.io"
      >
        <View>
          <Card
            highResSize={1440}
            imageRatio={1}
            imageUri="https://lead1.io"
            showImage={true}
          >
            <ArticleSummary
              bylineProps={null}
              datePublicationProps={
                Object {
                  "date": "2017-11-17T00:01:00.000Z",
                  "publication": "TIMES",
                }
              }
              labelProps={
                Object {
                  "color": "#636C17",
                  "isVideo": false,
                  "title": "Label 1",
                }
              }
            />
          </Card>
        </View>
      </Link>
    </View>
    <View>
      <View>
        <View />
        <ActivityIndicator
          animating={true}
          color="#DBDBDB"
          hidesWhenStopped={true}
          size="large"
        />
      </View>
    </View>
  </View>
</RCTScrollView>
`;
